[package]
name = "fisher"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fisher"
crate-type = ["cdylib"]

[dependencies]
factorial = "0.4.0"
float-cmp = "0.9.0"
libc = "0.2.155"
pyo3 = "0.22.0"
rand = "0.8.5"
