[package]
name = "fisher"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "fisher"

[dependencies]
fastrand = "2.3.0"
float-cmp = "0.10.0"
pyo3 = "0.29.0"
rayon = "1.10.0"
thread_local = "1.1.8"
wide = "1.2.0"

[build-dependencies]
cc = "1.1.17"

[profile.dev]
overflow-checks = false

[profile.release]
lto = "fat"
codegen-units = 1
